--- a/tourismaustralia-styleguide/assets/scss/site/modules/_footer.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_footer.scss
@@ -9,7 +9,7 @@
   //background-color: #000;
   max-width: pxtoem(1200px);
   margin: 0 auto;
-  padding: 0 .5em;
+  padding: 0 1em;
 }
 
 .footer-logo {
